refactor: cleanup trpc demo

--- a/starters/server/package.json
+++ b/starters/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@euricom/trpc-server",
+  "name": "@euricom/trpc-server-base",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
