--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,18 +11,23 @@
     "cleanup": "rimraf coverage dist"
   },
   "dependencies": {
+    "@euricom/trpc-server": "1.0.0",
+    "@tanstack/react-query": "^4.29.1",
+    "@trpc/client": "^10.20.0",
+    "@trpc/react-query": "^10.20.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
+    "@types/jest": "^28.1.6",
+    "@types/node": "^16.11.45",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
-    "@vitejs/plugin-react": "^3.1.0",
+    "@vitejs/plugin-react": "^2.0.0",
     "autoprefixer": "^10.4.8",
-    "concurrently": "^8.0.1",
+    "concurrently": "^7.3.0",
     "eslint": "^8.20.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -34,10 +39,10 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-organize-imports": "^3.0.0",
-    "rimraf": "^5.0.0",
+    "rimraf": "^3.0.2",
     "tailwindcss": "^3.1.6",
-    "typescript": "^5.0.4",
-    "vite": "^4.2.1",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.2",
     "vite-plugin-environment": "^1.1.2",
     "vite-plugin-svgr": "^2.2.1"
   },
