--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,12 +12,16 @@
   "author": "Peter Cosemans",
   "license": "MIT",
   "dependencies": {
+    "@trpc/server": "^10.20.0",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
     "cors": "^2.8.5",
     "eslint": "^8.38.0",
     "express": "^4.18.2",
-    "typescript": "^5.0.4"
+    "superjson": "^1.12.2",
+    "trpc-panel": "^1.2.13",
+    "typescript": "^5.0.4",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "tsx": "^3.12.6"
